# virgo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  Makefile  README.rst  config.sample.yaml  pyproject.toml  requirements.txt  ruff.toml  tox.ini
.github/workflows/: build.yml  codecov.yml  codeql.yml  linter.yml  pypi.yml  pytest.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
src/uptainer/: __init__.py  cli.py  config.py  git.py  loader.py  uptainer.py
src/uptainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/uptainer/providers/: dockerhub.py
src/virgo/: __init__.py  cli.py  config.py  git.py  loader.py  typer.py  virgo.py
src/virgo.egg-info/: PKG-INFO  SOURCES.txt
src/virgo/providers/: baseprovider.py  dockerhub.py  github.py
tests/: __init__.py  test_config.py  test_git.py  test_loader.py  test_provider_dockerhub.py  test_provider_github.py  test_virgo.py
tests/assets/: config.yaml
